--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,23 @@
-<p>home works!</p>
+<section class="hero">
+  <div class="carousel-container">
+    <div
+      class="carousel-slide"
+      *ngFor="let slide of slides; let i = index"
+      [class.active]="i === currentSlideIndex"
+    >
+      <img [src]="slide.image" alt="Restaurant Image" />
+    </div>
+
+    <!-- Buttons -->
+    <button class="prev" (click)="prevSlide()">&#10094;</button>
+    <button class="next" (click)="nextSlide()">&#10095;</button>
+  </div>
+
+  <div class="hero-text">
+    <h1>Welcome to New Colorado Restaurant</h1>
+    <p>
+      Your perfect dining experience for delicious food, great drinks, and
+      amazing service.
+    </p>
+  </div>
+</section>
