--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,6 +11,13 @@
       >
       <a
         mat-list-item
+        routerLink="/menu"
+        routerLinkActive="active"
+        (click)="sidenav.close()"
+        >Menu</a
+      >
+      <a
+        mat-list-item
         routerLink="/cart"
         routerLinkActive="active"
         (click)="sidenav.close()"
@@ -49,6 +56,7 @@
       <span class="spacer"></span>
       <nav class="navbar-links">
         <a mat-button routerLink="/" routerLinkActive="active">Home</a>
+        <a mat-button routerLink="/menu" routerLinkActive="active">Menu</a>
         <a mat-button routerLink="/cart" routerLinkActive="active">Cart</a>
         <a mat-button routerLink="/login" routerLinkActive="active">Login</a>
         <a mat-button routerLink="/about" routerLinkActive="active">About</a>
