--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -33,7 +33,7 @@ $off-white: #f5f5f5;
       transition: 0.3s;
 
       &:hover {
-        background: darken($hover-brown, 10%);
+        background: black;
       }
     }
 
