--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,8 +1,10 @@
-<div class="menu">
-  <app-product-card
-    *ngFor="let product of products"
-    [product]="product"
-    (addToCart)="handleAddToCart($event)"
-  >
-  </app-product-card>
+<div class="menu-wrapper">
+  <div class="products">
+    <app-product-card
+      *ngFor="let product of products"
+      [product]="product"
+      (addToCart)="handleAddToCart($event)"
+    >
+    </app-product-card>
+  </div>
 </div>
