--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,11 +1,1 @@
-<div class="auth-container">
-  <div class="auth-box">
-    <h2>Login</h2>
-    <form (submit)="onLogin()">
-      <p class="switch">
-        Don't have an account?
-        <!-- Open modal on click -->
-      </p>
-    </form>
-  </div>
-</div>
+<p>registerezz <span routerLink="/register">Register link</span></p>
