register, login, 2 interfaces, better hero, cart done

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,6 +1,6 @@
 @use "@angular/material" as mat;
 
-$primary-brown: #6d4c41; // Brown
+$primary-brown: #352622; // Brown
 $light-brown: #8d6e63; // Light Brown
 $off-white: #f5f5f5; // Off-white
 $hover-brown: #563b33; // Darker hover brown
