--- a/src/app/components/product-card/product-card.component.scss
+++ b/src/app/components/product-card/product-card.component.scss
@@ -74,4 +74,9 @@
     display: flex;
     justify-content: flex-end;
   }
+
+  button {
+    background-color: #5f321ad0 !important;
+    color: white !important;
+  }
 }
