--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -16,8 +16,6 @@
   </mat-card-content>
 
   <mat-card-actions>
-    <button mat-raised-button color="primary" (click)="addProduct()">
-      Add to Cart
-    </button>
+    <button mat-raised-button (click)="addProduct()">Add to Cart</button>
   </mat-card-actions>
 </mat-card>
