--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -3,7 +3,7 @@
     <div class="branding">
       <img src="colorado_logo.jpg" alt="Logo" class="logo" />
       <h2>Embrace the Colorado Flavor</h2>
-      <p>Your cravings, delivered in minutes.</p>
+      <p>Flavor that feels like home.</p>
     </div>
   </div>
 
