--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -1,7 +1,6 @@
 .register-container {
   display: flex;
   min-height: 100vh;
-  overflow: hidden; /* Prevent scrolling */
 
   @media (max-width: 768px) {
     flex-direction: column;
@@ -23,7 +22,7 @@
 
 .left-side {
   flex: 1;
-  background: #6b574f;
+  background: #8f766c;
   color: #fff;
   display: flex;
   align-items: center;
@@ -71,7 +70,7 @@
     max-width: 400px;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.8rem;
 
     h2 {
       margin-bottom: 1rem;
