localstorage for cart, add-to-cart dialog, cartervice, little cleanup

--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -20,7 +20,10 @@
     <p>
       Total: <strong>{{ getTotal() | currency }}</strong>
     </p>
-    <button class="order-btn" (click)="placeOrder()">Place Order</button>
+    <div>
+      <button class="clear-btn" (click)="clearCart()">Clear cart</button>
+      <button class="order-btn" (click)="placeOrder()">Place Order</button>
+    </div>
   </div>
 </div>
 
