--- a/src/app/pages/cart/cart.component.scss
+++ b/src/app/pages/cart/cart.component.scss
@@ -112,6 +112,7 @@
     color: white;
     border: none;
     margin-right: 10px;
+    margin-bottom: 5px;
     border-radius: 6px;
     cursor: pointer;
     transition: background 0.2s;
