--- a/src/app/components/product-card/product-card.component.scss
+++ b/src/app/components/product-card/product-card.component.scss
@@ -8,7 +8,7 @@
 
   &:hover {
     transform: translateY(-6px) scale(1.02);
-    box-shadow: 0 8px 20px rgba(255, 87, 34, 0.2);
+    box-shadow: 0 8px 20px rgba(255, 86, 34, 0.221);
   }
 
   &::after {
@@ -17,7 +17,7 @@
     inset: 0;
     border-radius: 16px;
     pointer-events: none;
-    box-shadow: 0 0 0 2px rgba(255, 87, 34, 0.2); // Deep orange highlight
+    box-shadow: 0 0 0 2px rgba(255, 86, 34, 0.349);
     opacity: 0;
     transform: scale(0.98);
     transition: opacity 0.3s ease, transform 0.3s ease;
@@ -66,6 +66,7 @@
       margin-top: 0.5rem;
       font-size: 0.9rem;
       color: #b71c1c;
+      height: 20px;
     }
   }
 
@@ -79,4 +80,10 @@
     background-color: #5f321ad0 !important;
     color: white !important;
   }
+}
+
+.single-line {
+  white-space: nowrap; /* Prevents wrapping */
+  overflow: hidden; /* Hides overflow */
+  text-overflow: ellipsis; /* Adds ellipsis (...) if text is too long */
 }
