--- a/src/app/components/product-card/product-card.component.scss
+++ b/src/app/components/product-card/product-card.component.scss
@@ -80,6 +80,10 @@
     background-color: #5f321ad0 !important;
     color: white !important;
   }
+
+  .clickable {
+    cursor: pointer;
+  }
 }
 
 .single-line {
