--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -31,6 +31,14 @@
         (click)="sidenav.close()"
         >Login</a
       >
+      <a
+        *ngIf="isLoggedIn"
+        mat-list-item
+        routerLink="/profile"
+        routerLinkActive="active"
+        (click)="sidenav.close()"
+        >Login</a
+      >
       <a *ngIf="isLoggedIn" mat-list-item (click)="logout(); sidenav.close()"
         >Logout</a
       >
@@ -59,6 +67,13 @@
           routerLink="/login"
           routerLinkActive="active"
           >Login</a
+        >
+        <a
+          *ngIf="isLoggedIn"
+          mat-button
+          routerLink="/profile"
+          routerLinkActive="active"
+          >Profile</a
         >
         <a *ngIf="isLoggedIn" mat-button (click)="logout()">Logout</a>
       </nav>
